k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aim-framework
  labels:
    name: aim-framework
    app: aim-framework
